# PRNet

./: .gitignore  .travis.yml  LICENSE  README.md  api.py  build.sh  demo.py  demo_texture.py  predictor.py  requirements.txt  run.py  run_basics.py  test_basics.py  train.py
Data/net-data/: 256_256_resfcn256_weight.index
Data/uv-data/: face_ind.txt  uv_kpt_ind.txt
TestImages/AFLW2000/: image00050.mat  image00081.mat  image00251.mat  image00430.mat  image00475.mat  image00514.mat  image00516.mat  image01038.mat  image01322.mat  image02283.mat  image02420.mat  image02545.mat  image02616.mat  image03324.mat  image03614.mat  image04331.mat
face3d/examples/: 9_generate_prnet_trainset_300WLP.py
face3d/examples/DataRotate/: AFW_1051618982_1_0.mat  AFW_1051618982_1_0_angle_-15.mat  AFW_1051618982_1_0_angle_-30.mat  AFW_1051618982_1_0_angle_-45.mat  AFW_1051618982_1_0_angle_-60.mat  AFW_1051618982_1_0_angle_15.mat  AFW_1051618982_1_0_angle_30.mat  AFW_1051618982_1_0_angle_45.mat  AFW_1051618982_1_0_angle_60.mat
face3d/examples/test/AFW/: AFW_134212_1_0.mat  AFW_134212_1_1.mat
face3d/face3d/: __init__.py
face3d/face3d/mesh/: __init__.py  io.py  light.py  render.py  transform.py  vis.py
face3d/face3d/mesh_numpy/: __init__.py  io.py  light.py  render.py  transform.py
face3d/face3d/morphable_model/: __init__.py  fit.py  load.py  morphabel_model.py
utils/: cv_plot.py  estimate_pose.py  render.py  render_app.py  rotate_vertices.py  write.py
utils/fast_render/: CMakeLists.txt  fast_render.py
utils/fast_render/src/: render.cpp  render.h
(+11 files in other folders)
